Fix various styling issues
- Fix scrollbar overlapping with tabs for MaterialDesign and Oblivion
  theme.
- Fix s-table table header cell d'n'd positioning issue.
- Fix rutracker_check plugin DOM structure to comply with other
  built-in items.
- Remove ancient browser version check code blocks for Konqueror.

--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,7 @@ div.cont {padding: 6px;}
   border-bottom: none;
   background-color: #FFFFFF;
   color: unset;
+  text-wrap: nowrap;
 }
 .tabbar li.nav-item a.nav-link:hover {
   border-top: 2px solid #FFC73C;
