--- a/plugins/theme/themes/Oblivion/style.css
+++ b/plugins/theme/themes/Oblivion/style.css
@@ -202,6 +202,7 @@ div#gcont div.row.Header span {
   background: transparent url(./images/status_icons.png) no-repeat left -285px;
 }
 div#gcont div.row:not(.Header) span.det-hdr {
+  text-wrap: nowrap;
   padding-left: 17px;
   background: transparent url(./images/status_icons.png) no-repeat left -305px;
 }
@@ -209,9 +210,6 @@ div#gcont div.row {
   background-color: #181818;
   font-family: inherit;
   color: #D4D6C9;
-}
-div#gcont div.row > div {
-  padding-left: 17px;
 }
 div.graph_tab {color:#FFF; background-color: #181818}
 .graph_tab_legend { color: #FFF; background-color: #181818; }
@@ -240,7 +238,6 @@ div#tdcont {background: #181818; border-top: none; border-right: 1px solid #0707
 .tabbar {
   color: #038BA9; background: #181818 url(./images/headers.png) repeat-x 0px -89px;
   text-shadow: 0px 1px 0px #000;
-  height: 24px;
   border-top: 1px solid #333;
   border-right: 1px solid #070707;
   border-left: 1px solid #1b1b1b;
